# privilege

./: .gitignore  .openai_session_id.example  CODEX-SESSIONS.md  HANDOFF.md  LICENSE  MCP.md  README.md  SECURITY-REVIEW-PASS2.md  SECURITY-REVIEW.md  SPEC.md  SUBMISSION.md  TESTING.md  install-mcp.command  pyproject.toml  run.bat  run.command
demo/: demo-vault.sqlite3  seed.py
docs/media/: DEVPOST-GALLERY.md  YOUTUBE-UPLOAD.md
docs/superpowers/specs/: 2026-07-21-engagement-attestation-design.md  2026-07-21-flow-walkthrough-modal-design.md  2026-07-21-pdf-lifecycle-demo-design.md
eval/: README.md  results.json  results.live.json  run.py  scenarios.py
policies/: README.md  launch-embargo.json  restructuring.json  sale-process.json
src/: __init__.py  analyze.py  cli.py  intake.py  openai_client.py  pdf_out.py  policy.py  preflight.py  sanitize.py  server_http.py  server_mcp.py  service.py  store.py
tests/: test_adversarial_security.py  test_cli.py  test_eval.py  test_intake.py  test_openai_client.py  test_pdf_export.py  test_policy.py  test_preflight.py  test_sanitize.py  test_service.py  test_store.py
tools/devpost-gallery/: REGENERATE.md  architecture.html  capture-architecture.mjs  capture-slides.mjs  capture-ui.mjs  chatgpt-live.mjs  consultant-workflow-b.html  consultant-workflow.html  eval-table.html  package-lock.json  package.json  policy-form-card.html  record-demo-3min-v2.mjs  record-demo-3min.mjs  record-flow-walkthrough.mjs  record-pdf-lifecycle.mjs  run-full-demo.sh  setup-chatgpt-profile.mjs  stitch-demo.sh
web/: index.html
(+6 files in other folders)
